Apply filters button and filters are aligned correctly

--- a/crt_portal/static/sass/custom/intake.scss
+++ b/crt_portal/static/sass/custom/intake.scss
@@ -94,6 +94,7 @@
     width: 100%;
     flex-wrap: wrap;
     white-space: normal;
+    align-items: baseline;
 
     .crt-dropdown {
       margin-right: 2rem;
